--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 h1 {
-  text-decoration: underline;
   color: goldenrod;
   font-family: "Pacifico", cursive;
 }
@@ -24,12 +23,14 @@ h4 {
 }
 
 body {
+  margin: 8px;
+  display: block;
   background-color: rgb(68, 1, 131);
   font-size: large;
 }
 
 img {
-  width: 580px;
+  width: 550px;
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -45,4 +46,33 @@ p {
   margin-left: 10px;
   width: 600px;
   color: aliceblue;
+}
+
+#testP {
+  font-size: 20px;
+  border: 2px solid black;
+}
+
+.funParagraph {
+  color: green;
+  font-size: 18px;
+  font-style: italic;
+  background-color: #f0f0f0;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.article-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+}
+
+#mainHeading {
+  color: red;
+  font-size: 50px;
+  border: 2px solid goldenrod;
+  text-align: center;
 }
