--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ h1 {
 }
 
 h2 {
+  text-align: center;
   text-decoration: underline;
   color: goldenrod;
   font-family: "Pacifico", cursive;
@@ -11,18 +12,21 @@ h2 {
 }
 
 h3 {
+  text-align: center;
   text-decoration: underline;
   color: goldenrod;
   font-family: "Pacifico", cursive;
 }
 
 h4 {
+  text-align: center;
   text-decoration: underline;
   color: goldenrod;
   font-family: "Pacifico", cursive;
 }
 
 body {
+  text-align: center;
   margin: 8px;
   display: block;
   background-color: rgb(68, 1, 131);
@@ -31,7 +35,7 @@ body {
 
 img {
   width: 550px;
-  max-width: 600px;
+  max-width: 550px;
   margin: 0 auto;
   padding: 20px;
   border: 2px solid #ccc;
@@ -41,17 +45,23 @@ img {
 footer {
   color: goldenrod;
 }
+
 p {
-  text-align: left;
-  margin-left: 10px;
-  width: 600px;
-  color: aliceblue;
+font-style: italic;
+  background-color:  goldenrod;
+  border: 20px solid goldenrod;
+  color: blueviolet;
 }
 
 #testP {
   font-size: 20px;
   border: 2px solid black;
 }
+
+.image-container {
+  text-align: center;
+}
+
 
 .funParagraph {
   color: green;
@@ -63,6 +73,7 @@ p {
 }
 
 .article-container {
+text-align: center;
   max-width: 1000px;
   margin: 0 auto;
   padding: 20px;
